# RealTimeAudioProcessing

./: .gitignore  CHANGELOG.md  README.md
.devcontainer/: devcontainer.json
S1-Matlab_AudioProcessor/: README.md  audio_processor.m
S1-Python_AudioProcesor/: audio_processor.py
S1-Python_AudioProcessor/: .gitrepo  .replit  README.md  audio_processor.ipynb  audio_processor.py  requirements.txt
S2-CPP_OfflineAudioProcessor/: .gitignore  .gitrepo  CMakeLists.txt  README.md
S2-CPP_OfflineAudioProcessor/sources/: main.cpp
S2-C_OfflineAudioProcessor/: .gitrepo  CMakeLists.txt  README.md
S2-C_OfflineAudioProcessor/sources/: main.cpp
S2-OfflineAudioProcessor/: .gitrepo  .replit  CMakeLists.txt  README.md  audio_processor.cpp  audio_processor.h  main.cpp
S2-OfflineAudioProcessor/sources/: audio_processor.cpp  audio_processor.h  main.cpp
S3-Android_AudioLoop/: README.md
S3-CPP_JUCE_AudioLoop/: AudioLoop.jucer  README.md
S3-CPP_JUCE_AudioLoop/JuceLibraryCode/: JuceHeader.h
S3-CPP_JUCE_AudioLoop/sources/: main_component.cpp  main_screen.cpp  main_screen.h
S3-CPP_JUCE_AudioProcessor/: AudioProcessor.jucer  README.md
S3-CPP_JUCE_AudioProcessor/JuceLibraryCode/: JuceHeader.h
S3-CPP_JUCE_AudioProcessor/sources/: main_screen.h
S3-C_JUCE_AudioLoop/: AudioLoop.jucer  README.md
S3-C_JUCE_AudioLoop/sources/: main.cpp  (+1 more)
S3-C_JUCE_AudioProcessor/: AudioProcessor.jucer  README.md
S3-JUCE_AudioLoop/: AudioLoop.jucer  README.md
S3-JUCE_AudioProcessor/: AudioProcessor.jucer  README.md
S3-iOS_AudioLoop/: README.md
Sounds/: pcmf32TOwav.py  wavTOpcmf32.py
(+50 files in other folders)
